[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiscRelated/FontRelated/Fonts/Monogram/monogram.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/TileColorEditPanel/GUI_TileColorEditPanel.gd" type="Script" id=2]
[ext_resource path="res://GameSaveRelated/GUIs/GameSettingsRelated/TileColorEditPanel/Subs/GUI_SingleTileColorEditPanel/GUI_SingleTileColorEditPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObjectsRelated/Pickupables/Subs/_CusotmDefinedSingleUse/Pickupable_Module_TileColors.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_top = -4
font_data = ExtResource( 1 )

[node name="GUI_TileColorEditPanel" type="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_left = 55.0
margin_top = 20.0
margin_right = 905.0
margin_bottom = 520.0
size_flags_horizontal = 6
custom_constants/separation = 40

[node name="DescsContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 850.0
margin_bottom = 34.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DescsContainer"]
margin_right = 850.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/DescsContainer/VBoxContainer"]
margin_left = 244.0
margin_right = 605.0
margin_bottom = 34.0
size_flags_horizontal = 6
custom_constants/separation = 22

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/DescsContainer/VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 33.0
margin_bottom = 32.0
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="TitleLabel" type="Label" parent="HBoxContainer/DescsContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 361.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "Tile Color Editor"
align = 1

[node name="TileColorContainer" type="MarginContainer" parent="HBoxContainer"]
margin_top = 218.0
margin_right = 850.0
margin_bottom = 355.0
size_flags_vertical = 6

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/TileColorContainer"]
margin_right = 850.0
margin_bottom = 137.0
size_flags_horizontal = 6
custom_constants/separation = 50

[node name="STCEP_Normal" parent="HBoxContainer/TileColorContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 250.0
margin_bottom = 137.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="STCEP_Energized" parent="HBoxContainer/TileColorContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 300.0
margin_right = 550.0
margin_bottom = 137.0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="STCEP_Grounded" parent="HBoxContainer/TileColorContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 600.0
margin_right = 850.0
margin_bottom = 137.0
size_flags_horizontal = 6
size_flags_vertical = 3
